--- a/quests.html
+++ b/quests.html
@@ -147,8 +147,29 @@
                         <div class="blog-content">
                             <h3>Facebook Quest</h3>
 
-                            <p>Todo</p>
+                            <p>You can get a reward for sharing a Facebook status about Anonutopia and Anote. The reward is 10 anotes 
+                            and first time, you will also get 0.00000001 AINTs.</p>
 
+                            <p><strong><u>Keep in mind that 0.00000001 AINTs will be a required amount for all withdrawals in the future.</u></strong></p>
+
+                            <h4>Howto</h4>
+
+                            <p>To claim your reward, follow these simple steps:</p>
+
+                            <p style="margin-bottom: 20px;">
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /ref command to AnonsRobot<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy your referral message<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Publish that referral message in your Facebook status<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy link to that Facebook status (time / date bellow your name is a link to your post)<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /facebook command to AnonsRobot<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Paste your Facebook post link and you're done<br>
+                            </p>
+
+                            <div class="row">
+                                <div class="col-md-6" style="margin-bottom: 20px;">
+                                    <img src="./static/img/facebook-link.png" alt="Facebook Link" width="100%">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
