--- a/black-paper.html
+++ b/black-paper.html
@@ -149,7 +149,7 @@
                             <!-- CUSTOM BLOCKQUOTE -->
                             <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded" style="margin-bottom: 35px;">
                                 <div class="blockquote-custom-icon shadow-sm"><i class="fa fa-quote-left text-white"></i></div>
-                                <p class="mb-0 mt-2 font-italic" style="margin-bottom: 0;"><strong>White knights in shiny armour, that's a false narrative. We are the darkness!</strong></p>
+                                <p class="mb-0 mt-2 font-italic" style="margin-bottom: 0;"><strong>White knights in shining armour, that's a false narrative. We are the darkness!</strong></p>
                                 <div class="blockquote-custom-icon shadow-sm" style="text-align: right;"><i class="fa fa-quote-right text-white"></i></div>
                                 <footer class="blockquote-footer pt-4 mt-4 border-top" style="margin-top: -10px;">Amir Taaki,
                                     <cite title="Source Title">former Bitcoin developer and revolutionary crypto-anarchist hacker</cite>
