--- a/aint.html
+++ b/aint.html
@@ -84,7 +84,8 @@
 
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
-					<li><a href="/">Home</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
 					<li><a href="/black-paper">Black Paper</a></li>
                     <li class="has-dropdown">
                         <a href="/anote">Anote</a>
@@ -204,6 +205,7 @@
                         <h3 class="title">Menu</h3>
                         <div class="widget-category">
                             <a href="/">Home</a>
+                            <a href="/about">About</a>
                             <a href="/black-paper">Black Paper</a>
                             <a href="/anote">Anote</a>
                             <a href="/aint">AINT</a>
