--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
-					<li><a href="/">Home</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
 					<li><a href="/black-paper">Black Paper</a></li>
                     <li class="has-dropdown">
                         <a href="/anote">Anote</a>
