--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>Anote Compared to PI | Anonutopia - Cloud Empire</title>
+    <title>Anote Compared to PI | Anonutopia - Open Source Cloud Empire</title>
     <meta name="description" content="Anote Compared to PI | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
@@ -38,7 +38,7 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/pi-comparison" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Anote Compared to PI | Anonutopia - Cloud Empire!" />
+    <meta property="og:title"              content="Anote Compared to PI | Anonutopia - Open Source Cloud Empire!" />
     <meta property="og:description"        content="Anote Compared to PI | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/anote_vs_pi_fb.png?v=1.0.0" />
 
