anote robot update

--- a/anonshout.html
+++ b/anonshout.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -150,10 +150,10 @@
                             <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> 
                             its value because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
                             <p>You can bid for ads on AnonShout by sending anotes to the address bellow, but you need to be 
-                            registered with <a href="https://t.me/AnonsRobot" class="robot">AnonsRobot</a>.</p>
+                            registered with <a href="https://t.me/AnoteRobot" class="robot">AnoteRobot</a>.</p>
 
-                            <p>If you would like to see the highest bid for tomorrow, hit /shoutinfo command with AnonsRobot. You can find a tutorial on 
-                            AnonsRobot usage <a href="/anonsrobot">here</a>. Currently we only have one ads channel, but we will expand it with more 
+                            <p>If you would like to see the highest bid for tomorrow, hit /shoutinfo command with AnoteRobot. You can find a tutorial on 
+                            AnoteRobot usage <a href="/anoterobot">here</a>. Currently we only have one ads channel, but we will expand it with more 
                             channels per country and interest.</p>
 
                             <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
@@ -185,7 +185,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
