--- a/anote.html
+++ b/anote.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -170,7 +170,7 @@
                             <h4><i class="fa fa-link"></i> Anote Referral System</h4>
 
                             <p>Anote has a referral that is used to build a web of trust, but you can also earn with it. You can invite people to Anonutopia
-                                by sending them a link or a message that you get if you send "/ref" command to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.
+                                by sending them a link or a message that you get if you send "/ref" command to <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a>.
                             </p>
 
                             <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
@@ -227,7 +227,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
