--- a/anoterobot.html
+++ b/anoterobot.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>How to Use AnonsRobot? | Anonutopia - Open Source Cloud Empire</title>
-    <meta name="description" content="How to Use AnonsRobot? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
+    <title>How to Use AnoteRobot? | Anonutopia - Open Source Cloud Empire</title>
+    <meta name="description" content="How to Use AnoteRobot? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -38,8 +38,8 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/anote/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="How to Use AnonsRobot? | Anonutopia - Open Source Cloud Empire!" />
-    <meta property="og:description"        content="How to Use AnonsRobot? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
+    <meta property="og:title"              content="How to Use AnoteRobot? | Anonutopia - Open Source Cloud Empire!" />
+    <meta property="og:description"        content="How to Use AnoteRobot? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
     <script type="text/javascript">
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -118,10 +118,10 @@
         
         <div class="header-wrapper sm-padding bg-dark">
             <div class="container">
-                <h2>How to Use AnonsRobot?</h2>
+                <h2>How to Use AnoteRobot?</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">AnonsRobot</li>
+                    <li class="breadcrumb-item active">AnoteRobot</li>
                 </ul>
             </div>
         </div>
@@ -146,9 +146,9 @@
                             <img class="img-responsive" src="./static/img/anote_logo.png" alt=""><br>
                         </div>
                         <div class="blog-content">
-                            <h3>AnonsRobot Tutorial</h3>
+                            <h3>AnoteRobot Tutorial</h3>
 
-                            <p><a href="https://t.me/AnonsRobot" class="robot">AnonsRobot</a> is a <a href="https://telegram.org/" target="_blank">Telegram</a> bot 
+                            <p><a href="https://t.me/AnoteRobot" class="robot">AnoteRobot</a> is a <a href="https://telegram.org/" target="_blank">Telegram</a> bot 
                                 and main tool for Anonutopia and Anote administration. For now it's mainly used for mining anotes. You use it by 
                                 chatting with it, as with any other user and providing it with commands that start with "/" sign, like /register, 
                                 /mine, /status and similar. You can use it in our Telegram groups or in private messages which is a preferred way. 
@@ -227,7 +227,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
