--- a/beginner.html
+++ b/beginner.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -153,14 +153,14 @@
 
                             <p>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Download and install <a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Open <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> Telegram chat bot and click start button<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Open <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a> Telegram chat bot and click start button<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Subscribe to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel<br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Type and send /mine to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a><br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy daily mining code from <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Type and send /mine to <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy daily mining code from <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> to <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Join <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> group based on your language preferences
                             </p>
 
-                            <p>That's it, you're done, after this just follow the instructions you get from AnonsRobot to continue mining.</p>
+                            <p>That's it, you're done, after this just follow the instructions you get from AnoteRobot to continue mining.</p>
 
                             <p>You can find more detailed tutorial <a href="/mine">here</a>.</p>
 
@@ -182,7 +182,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
