--- a/mine.html
+++ b/mine.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -158,16 +158,16 @@
 
                             <p>Once you have these two installed either or your mobile phone or on your computer, simply open one of our Telegram 
                                 groups - <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> 
-                                (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
+                                (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a>
                                 will lead you through the rest of the process. If you have any questions, please don't hesitate to ask in one of our Telegram groups.
                             </p>
 
                             <p>The process is simple. You get subscribed to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel 
                             where we show ads on a daily basis, together with a mining code. After you've seen the add, you call /mine command with 
-                            <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> and provide it the daily mining code. And that's it, next day 
+                            <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a> and provide it the daily mining code. And that's it, next day 
                             you repeat the process.</p>
 
-                            <p>You can read more on how to use AnonsRobot <a href="/anonsrobot">here</a> and AnonShout <a href="/anonshout">here</a>.</p>
+                            <p>You can read more on how to use AnoteRobot <a href="/anotetobot">here</a> and AnonShout <a href="/anonshout">here</a>.</p>
 
                             <h4><i class="fa fa-bolt"></i> Mining Power</h4>
 
@@ -183,7 +183,7 @@
                             </p>
 
                             <p>You can invite people to Anonutopia by sending them a link or a message that you get if you send "/ref" command to
-                            <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.</p>
+                            <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a>.</p>
 
                             <h4><i class="fa fa-credit-card"></i> Purchase Mining Power</h4>
 
@@ -207,7 +207,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
