--- a/purchase.html
+++ b/purchase.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -151,7 +151,7 @@
 
                             <p>If you're not patient enough to mine it, you can always purchase Anote using Waves. Simply send Waves to the address bellow and you'll
                                 automatically receive your anotes according to the current price. Both address and price can be checked with 
-                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
+                                <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
 
                             <p>Before purchasing Anotes directly from Anonutopia which in fact creates new denominations, you should check offers on Waves Exchange 
@@ -168,7 +168,7 @@
 
                             <h4>Calculator</h4>
 
-                            <p><a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> has a built in calculator command (/calculate). You 
+                            <p><a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a> has a built in calculator command (/calculate). You 
                             just send it amount of EUR you're planning to invest and it will return amount of anotes you are going to receive.</p>
 
                             <br>
@@ -204,7 +204,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
