--- a/quests.html
+++ b/quests.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -158,11 +158,11 @@
                             <p>To claim your reward, follow these simple steps:</p>
 
                             <p style="margin-bottom: 20px;">
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /ref command to AnonsRobot<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /ref command to AnoteRobot<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Copy your referral message<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Publish that referral message in your Facebook status<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Copy link to that Facebook status (time / date bellow your name is a link to your post)<br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /facebook command to AnonsRobot<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Send /facebook command to AnoteRobot<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Paste your Facebook post link and you're done<br>
                             </p>
 
@@ -189,7 +189,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
