--- a/aint.html
+++ b/aint.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -168,7 +168,7 @@
                             <h4>How to purchase AINT?</h4>
 
                             <p>To purchase AINTs, simply send Waves to the address bellow and you'll automatically receive your AINTs according 
-                                to the current price which can be checked with <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> 
+                                to the current price which can be checked with <a href="https://t.me/AnoteRobot" target="_blank" class="robot">AnoteRobot</a> 
                                 by using /info command. All your Waves will go towards funding Anonutopia and direct democracy.</p>
 
                             <p>If you don't have any Waves, you can buy them using your credit or debit card inside 
