--- a/black-paper.html
+++ b/black-paper.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
