--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -251,7 +251,7 @@
 					</div>
                     <div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Open <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>, our friendly bot</p>
+						<p>Open <a href="https://t.me/AnoteRobot" target="_blank">AnoteRobot</a>, our friendly bot</p>
 					</div>
 					<div class="feature">
 						<i class="fa fa-check"></i>
@@ -259,7 +259,7 @@
 					</div>
                     <div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Follow the instructions from AnonsRobot</p>
+						<p>Follow the instructions from AnoteRobot</p>
 					</div>
 				</div>
 				
