--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -93,7 +93,7 @@
                             <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
-                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anoterobot">AnoteRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                             <li><a href="/quests">Anote Quests</a></li>
@@ -227,7 +227,7 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anoterobot">How to Use AnoteRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
                             <a href="/quests">Anote Quests</a>
