--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>Anonutopia - Open Source Cloud Empire</title>
+    <title>Anonutopia - Open Source Society</title>
     <meta name="description" content="Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
@@ -38,7 +38,7 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Anonutopia - Open Source Cloud Empire!" />
+    <meta property="og:title"              content="Anonutopia - Open Source Society!" />
     <meta property="og:description"        content="Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
@@ -117,7 +117,7 @@
                     
                     <div class="col-md-10 col-md-offset-1">
                         <div class="home-content">
-                            <h1 class="white-text">Open Source Cloud Empire</h1>
+                            <h1 class="white-text">Open Source Society</h1>
                             <p class="white-text" style="margin-bottom: 30px;">
                                 We're a group of people from all around the globe building Open Source society based on freedom, crypto-anarchism,
                                 direct democracy and meritocracy. We're gathered around Anote cryptocurrency, the building block of future society.
